# Initial-PoC-CAD-Release-Monitoring-Service

./: .gitignore  README.md  pyproject.toml
config/: sources.creo-test.json  sources.exchanges-test.json  sources.json  sources.jt-test.json  sources.quicktest.json
data/: current_versions.json  format_support_matrix.json
src/cad_release_monitor/: __init__.py  __main__.py  cli.py  format_analyzer.py  format_cli.py  monitor.py
src/cad_release_monitoring_service.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
